tests/baselines/reference/subtypingWithConstructSignaturesWithSpecializedSignatures.errors.txt
==== tests/cases/compiler/subtypingWithConstructSignaturesWithSpecializedSignatures.ts (8 errors) ====
    // same as subtypingWithCallSignatures but with additional specialized signatures that should not affect the results
    
    module CallSignature {
        interface Base { // T
            // M's
            new (x: 'a'): void;
            ~~~~~~~~~~~~~~~~~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(6,9): error TS2133: Constructors cannot have a return type of 'void'.
            new (x: string, y: number): void;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(7,9): error TS2133: Constructors cannot have a return type of 'void'.
        }
    
        // S's
        interface I extends Base {
            // N's
            new (x: 'a'): number; // ok because base returns void
            new (x: string, y: number): number; // ok because base returns void
            new <T>(x: T): string; // ok because base returns void
        }   
    
        interface Base2 { // T
            // M's
            new (x: 'a'): number;
            new (x: string): number;
        }
    
        // S's
        interface I2 extends Base2 {
                  ~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(25,15): error TS2143: Interface 'CallSignature.I2' cannot extend interface 'CallSignature.Base2':
!!! 	Construct signatures of types 'I2' and 'Base2' are incompatible.
            // N's
            new (x: 'a'): string;
            new (x: string): string; // error because base returns non-void;
        }
    
        // S's
        interface I3 extends Base2 {
            // N's
            new <T>(x: T): string; // ok, adds a new call signature
        }
    }
    
    module MemberWithCallSignature {
        interface Base { // T
            // M's
            a: {
                new (x: 'a'): void;
                ~~~~~~~~~~~~~~~~~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(42,13): error TS2133: Constructors cannot have a return type of 'void'.
                new (x: string): void;
                ~~~~~~~~~~~~~~~~~~~~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(43,13): error TS2133: Constructors cannot have a return type of 'void'.
            }
            a2: {
                new (x: 'a', y: number): void;
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(46,13): error TS2133: Constructors cannot have a return type of 'void'.
                new (x: string, y: number): void;
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(47,13): error TS2133: Constructors cannot have a return type of 'void'.
            }
            a3: new <T>(x: T) => void;
        }
    
        // S's
        interface I extends Base {
            // N's
            a: new (x: string) => number; // ok because base returns void
            a2: new  (x: string, y: number) => boolean; // ok because base returns void
            a3: new <T>(x: T) => string; // ok because base returns void
        }
    
        interface Base2 { // T
            // M's
            a: {
                new (x: 'a'): number;
                new (x: string): number;
            }
            a2: new <T>(x: T) => T;
        }
    
        // S's
        interface I2 extends Base2 {
                  ~~
!!! subtypingWithConstructSignaturesWithSpecializedSignatures.ts(70,15): error TS2143: Interface 'MemberWithCallSignature.I2' cannot extend interface 'MemberWithCallSignature.Base2':
!!! 	Types of property 'a' of types 'I2' and 'Base2' are incompatible:
!!! 		Construct signatures of types 'new(x: string) => string' and '{ new(x: 'a'): number; new(x: string): number; }' are incompatible.
            // N's
            a: new (x: string) => string; // error because base returns non-void;
        }
    
        // S's
        interface I3 extends Base2 {
            // N's
            a2: new <T>(x: T) => string; // error because base returns non-void;
        }
    }